Added character imgs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <link rel="stylesheet" href="css/lightcase.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.scss" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chewy&display=swap"
+      rel="stylesheet"
+    />
     <!-- main css for template -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -98,25 +103,23 @@
                 <center>
                   <div>
                     <div>
-                      <h3 class="mainh11">
+                      <h1 class="mainh11">
                         Lorem ipsum dolor sit amet consectetur, adipisicing
                         elit. Velit quae reiciendis corporis voluptatem, a error
                         quaerat laborum et quis deleniti.
-                      </h3>
+                      </h1>
                       <br /><br />
                       <!-- <h3>Welcome to </h3> -->
-                      <a
-                        href="https://raydium.io/swap/?inputCurrency=sol&amp;outputCurrency=J87RBsVMvaiJ9sU9bQkPete5NpxBW3FKYwRDDUfDQfUf"
-                        ><h3 class="mainh1">BUY NOW</h3></a
+                      <a href="https://raydium.io/swap/#" target="_blank"
+                        ><h3 class="mainh1 fancy-button">BUY NOW</h3></a
                       >
                       <br />
                     </div>
 
                     <div>
                       <!-- <h3>Welcome to </h3> -->
-                      <a
-                        href="https://dexscreener.com/solana/J87RBsVMvaiJ9sU9bQkPete5NpxBW3FKYwRDDUfDQfUf"
-                        ><h3 class="mainh1">VIEW CHART</h3></a
+                      <a href="https://dexscreener.com/solana/#" target="_blank"
+                        ><h3 class="mainh1 fancy-button">VIEW CHART</h3></a
                       >
                       <br />
                     </div>
@@ -163,7 +166,7 @@
                 data-aos="fade-up"
                 data-aos-duration="2000"
               >
-                <h2>About</h2>
+                <h2 class="titles">About</h2>
                 <p class="aboutp">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Dolorem suscipit totam veniam fugit eligendi voluptates hic,
@@ -232,21 +235,21 @@
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/1.jpeg" alt="Book page" />
+                        <img src="images/1.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/2.jpg" alt="Book page" />
+                        <img src="images/2.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/3.jpg" alt="Book page" />
+                        <img src="images/3.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
@@ -260,21 +263,21 @@
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/4.jpg" alt="Book page" />
+                        <img src="images/4.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/5.jpg" alt="Book page" />
+                        <img src="images/5.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="collection__item">
                       <div class="collection__item-thumb">
-                        <img src="images/6.jpg" alt="Book page" />
+                        <img src="images/6.png" alt="Book page" />
                       </div>
                     </div>
                   </div>
@@ -308,7 +311,7 @@
       <div class="footer__copyright">
         <div class="container">
           <div class="text-center py-4">
-            <p class="mb-0">© 2024 | Book of Solana | All Rights Reserved</p>
+            <p class="mb-0">© 2024 | Jek The Dug | All Rights Reserved</p>
           </div>
         </div>
       </div>
