--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   </head>
 
   <body>
+    <audio autoplay loop>
+      <source src="images/bacon_pancakes.mp3" type="audio/mp3" />
+      Enable audio dipsh*t!
+    </audio>
     <!-- ========== Multipage Header Section Starts Here========== -->
     <header class="header-section">
       <div class="header-bottom">
@@ -317,7 +321,6 @@
       </div>
     </footer>
     <!-- ================> Footer section end here <================== -->
-
     <!-- vendor plugins -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/d7c1773dd4.js" crossorigin="anonymous"></script>
