bacon pancakes again

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
   </head>
 
   <body>
-    <audio autoplay loop>
-      <source src="images/bacon_pancakes.mp3" type="audio/mp3" />
-      Enable audio dipsh*t!
-    </audio>
+    <audio
+      src="images/bacon_pancakes.mp3"
+      loop="true"
+      preload="auto"
+      autoplay="true"
+    ></audio>
     <!-- ========== Multipage Header Section Starts Here========== -->
     <header class="header-section">
       <div class="header-bottom">
