--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="overlay"></div>
 
         <div class="banner__wrapper">
-          <div class="row g-5 align-items-center">
+          <div class="row gebes align-items-center">
             <div class="col-lg-12" style="margin-top: 100px">
               <div
                 class="banner__content"
@@ -142,7 +142,7 @@
                       <br /><br />
                       <!-- <h3>Welcome to </h3> -->
                       <a href="https://raydium.io/swap/#" target="_blank"
-                        ><h3 class="mainh1 fancy-button">BUY NOW</h3></a
+                        ><h3 class="mainh1 fancy-button">buy now</h3></a
                       >
                       <br />
                     </div>
@@ -150,7 +150,9 @@
                     <div>
                       <!-- <h3>Welcome to </h3> -->
                       <a href="https://dexscreener.com/solana/#" target="_blank"
-                        ><h3 class="mainh1 fancy-button">VIEW CHART</h3></a
+                        ><h3 class="mainh1 fancy-button">
+                          makin bakon pancakes
+                        </h3></a
                       >
                       <br />
                     </div>
