--- a/index.html
+++ b/index.html
@@ -27,15 +27,24 @@
   </head>
 
   <body>
-    <a
+    <button
       class="fixed-pancakes"
       href="#"
       onclick="toggleSound(); return false;"
       rel="nofollow noopener"
       title="Make Pancakes"
     >
-      <img src="images/bacon-pancake.png" width="34" height="34" />
-    </a>
+      click to bake pancakes
+      <img
+        src="images/bacon-pancake.png"
+        style="
+          width: 29px;
+          margin-left: 0px;
+          margin-right: 5px;
+          flex-direction: row-reverse;
+        "
+      />
+    </button>
 
     <audio id="pancakes" src="images/bacon_pancakes.mp3"></audio>
 
@@ -150,9 +159,7 @@
                     <div>
                       <!-- <h3>Welcome to </h3> -->
                       <a href="https://dexscreener.com/solana/#" target="_blank"
-                        ><h3 class="mainh1 fancy-button">
-                          makin bakon pancakes
-                        </h3></a
+                        ><h3 class="mainh1 fancy-button">view chart</h3></a
                       >
                       <br />
                     </div>
