--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       rel="nofollow noopener"
       title="Make Pancakes"
     >
-      click to bake pancakes
+      click to make pancakes
       <img
         src="images/bacon-pancake.png"
         style="
@@ -105,7 +105,10 @@
                       <a href="https://t.me/#" target="_blank"> TELEGRAM </a>
                     </li>
                     <li>
-                      <a href="https://twitter.com/#" target="_blank">
+                      <a
+                        href="https://twitter.com/JakeTheDug_SOL"
+                        target="_blank"
+                      >
                         TWITTER
                       </a>
                     </li>
@@ -144,19 +147,21 @@
                   <div>
                     <div>
                       <h1 class="mainh11">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Velit quae reiciendis corporis voluptatem, a error
-                        quaerat laborum et quis deleniti.
+                        Jek the dug moon, no fin da humem moon Jek the dug MOON
+                        today I Jek the dug go moon today. Today jek moon go.
+                        Yes Jek the dug fly to moon. U cuming wif Jek the dug?
                       </h1>
                       <br /><br />
                       <!-- <h3>Welcome to </h3> -->
-                      <a href="https://raydium.io/swap/#" target="_blank"
-                        ><h3 class="mainh1 fancy-button">buy now</h3></a
-                      >
-                      <br />
+                      <div style="float: left">
+                        <a href="https://raydium.io/swap/#" target="_blank"
+                          ><h3 class="mainh1 fancy-button">buy now</h3></a
+                        >
+                        <br />
+                      </div>
                     </div>
 
-                    <div>
+                    <div style="float: right">
                       <!-- <h3>Welcome to </h3> -->
                       <a href="https://dexscreener.com/solana/#" target="_blank"
                         ><h3 class="mainh1 fancy-button">view chart</h3></a
@@ -207,22 +212,21 @@
                 data-aos-duration="2000"
               >
                 <h2 class="titles">About</h2>
-                <p class="aboutp">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dolorem suscipit totam veniam fugit eligendi voluptates hic,
-                  eum blanditiis veritatis consequatur similique dignissimos quo
-                  earum eveniet cum cupiditate corrupti modi. Placeat.<br /><br />
-
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Deleniti nostrum adipisci possimus asperiores placeat velit
-                  magnam fuga inventore magni quos.
+                <p style="padding-top: 15px" class="aboutp">
+                  Jek the dug is pet of fin da humen. fin da humen jus want to
+                  fite monsterz nd xplore land of Oooo but jek the Dug want to
+                  flie to MoOn. Ape some $JEK nd come wif me to da Moon and
+                  Beyund! only Chads nd reel dAwgz aloWed. Buy $JEK NOW!!!!! Sea
+                  U at da MOOOON!!
                 </p>
-                <ul class="aboutp">
-                  <li>• Supply:</li>
-                  <li>• Tax:</li>
-                  <li>• Liquidity:</li>
-                </ul>
-                <div class="cap">
+                <div style="padding-top: 120px">
+                  <ul class="aboutp">
+                    <li>• Supply: 1,000,000,000</li>
+                    <li>• Tax: 0/0</li>
+                    <li>• Liquidity:</li>
+                  </ul>
+                </div>
+                <div style="padding-top: 25px" class="cap">
                   <span>CA:</span>
                   <span id="copy-text"
                     >J87RBsVMvaiJ9sU9bQkPete5NpxBW3FKYwRDDUfDQfUf</span
