--- a/index.html
+++ b/index.html
@@ -355,6 +355,11 @@
         <div class="container">
           <div class="text-center py-4">
             <p class="mb-0">© 2024 | Jek The Dug | All Rights Reserved</p>
+            <p>
+              <a href="https://github.com/Egv2" target="_blank"
+                >Built with 💛 | CryptoMunk</a
+              >
+            </p>
           </div>
         </div>
       </div>
