--- a/index.html
+++ b/index.html
@@ -227,9 +227,7 @@
                 </div>
                 <div style="padding-top: 25px" class="cap">
                   <span>CA:</span>
-                  <span id="copy-text"
-                    >J87RBsVMvaiJ9sU9bQkPete5NpxBW3FKYwRDDUfDQfUf</span
-                  >
+                  <span id="copy-text"></span>
                   <button
                     class="btn btn-default btn-xs copy-link"
                     title="Copy Link"
