--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
                 <div style="padding-top: 25px" class="cap">
                   <span>CA:</span>
-                  <span id="copy-text"></span>
+                  <span id="copy-text">3a4WUCLYvP2GgAuUby4J7oLAU1zS44TZW3RgLMgwvZDB</span>
                   <button
                     class="btn btn-default btn-xs copy-link"
                     title="Copy Link"
